--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="la">
 <head>
   <meta charset="UTF-8" />
-  <title>Ghost Pixel</title>
+  <title>Phasma Pixel</title>
   <style>
     body {
       background-color: #000; /* fundo preto */
@@ -39,7 +39,6 @@
 </head>
 <body>
   <div class="ghost">👻</div>
-  <h1>Bem-vindo ao mundo dos fantasmas</h1>
-  <p>Um site simples com tema pixel art preto e branco — só pra assustar (ou encantar)!</p>
+  <h1>Salve in mundo phantarum</h1>
 </body>
 </html>
